--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Proyek- Hadin</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="img/logo H.png" type="image/x-icon">
   <!-- Ganti favicon jika mau -->
 </head>
@@ -134,5 +134,6 @@
   </script>
 </body>
 </html>
+
 
 
