--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Proyek- Hadin</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="img/logo H.png" type="image/x-icon">
+  <link rel="shortcut icon" href="logo H.png" type="image/x-icon">
   <!-- Ganti favicon jika mau -->
 </head>
 <body>
@@ -44,7 +44,7 @@
 
         <div class="hero-photo">
           <!-- Ganti 'foto-profil.jpg' dengan nama file foto kamu nanti -->
-          <img src="img/foto profil H.jpg" alt="Foto Profil - NAMA ANDA">
+          <img src="foto profil H.jpg" alt="Foto Profil - NAMA ANDA">
           <p class="photo-caption">Ini foto profil saya yang berada di Universitas Esa Unggul.</p>
         </div>
       </div>
@@ -88,21 +88,21 @@
 
       <div class="projects-grid">
         <article class="project">
-          <img src="img/project1.png" alt="Project 1 screenshot">
+          <img src="project1.png" alt="Project 1 screenshot">
           <h3>Proyek 1 — Profil hadin (template)</h3>
           <p>Proyek 1. Teknologi: HTML, CSS.</p>
           <a class="project-link" href="https://hadinpongs.netlify.app/">Lihat detail</a>
         </article>
 
         <article class="project">
-          <img src="img/project2.png" alt="Project 2 screenshot">
+          <img src="project2.png" alt="Project 2 screenshot">
           <h3>Proyek 2 — Videotron, Teks Running, Jam, Logo</h3>
           <p>Proyek 2. Teknologi: HTML, CSS, JavaScript.</p>
           <a class="project-link" href="https://hadinvidetron.netlify.app/">Lihat detail</a>
         </article>
 
         <article class="project">
-          <img src="img/project3.png" alt="Project 3 screenshot">
+          <img src="project3.png" alt="Project 3 screenshot">
           <h3>Proyek 3 — </h3>
           <p>Proyek 3. Teknologi: HTML, CSS</p>
           <a class="project-link" >Maaf gabisa di pencet, lihat dari gambarnya aja.</a>
@@ -134,6 +134,7 @@
   </script>
 </body>
 </html>
+
 
 
 
