--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body{font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Rob
 <body>
   <header class="site-header">
     <div class="container">
-      <a class="logo" href="index.html">Proyek Sekolah - Hadin</a>
+      <a class="logo" href="index.html">Proyek Sekolah - Hadin Feat Master Seni</a>
       <nav class="nav">
         <a href="#about">Tentang</a>
         <a href="#portfolio">Proyek</a>
@@ -212,6 +212,7 @@ body{font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Rob
   </script>
 </body>
 </html>
+
 
 
 
