--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@ body{font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Rob
         <div class="card">
           <h3>Pendidikan</h3>
           <p>SMK Taruna Bangsa Kota Bekasi 2023 - 2026</p>
+           <h3>Jurusan</h3>
+          <p>Rekayasa Perangkat Lunak - RPL</p>
           <h3>Pengalaman</h3>
           <p>PKL di perusahaan PT. Fujisei Metal Indonesia 09 Januari 2025 - 10 April 2025</p>
         </div>
@@ -212,6 +214,7 @@ body{font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Rob
   </script>
 </body>
 </html>
+
 
 
 
