--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@ body{font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Rob
 
         <article class="project">
           <img src="project3.png" alt="Project 3 screenshot">
-          <h3>Proyek 3 — </h3>
+          <h3>Proyek 3 — Website berita</h3>
           <p>Proyek 3. Teknologi: HTML, CSS</p>
-          <a class="project-link" >Maaf gabisa di pencet, lihat dari gambarnya aja.</a>
+          <a class="project-link" href="https://muhammadhadin.github.io/proyekhadin20254/" >Lihat detail</a>
         </article>
       </div>
     </section>
@@ -214,6 +214,7 @@ body{font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Rob
   </script>
 </body>
 </html>
+
 
 
 
