--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Proyek- Hadin</title>
+  <title>Proyek - Hadin</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="logo H.png" type="image/x-icon">
   <!-- Ganti favicon jika mau -->
@@ -182,7 +182,7 @@ body{font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Rob
         </article>
 
         <article class="project">
-          <img src="project3.png" alt="Project 3 screenshot">
+          <img src="hadinnews.png" alt="Project 3 screenshot">
           <h3>Proyek 3 — Website berita</h3>
           <p>Proyek 3. Teknologi: HTML, CSS</p>
           <a class="project-link" href="https://muhammadhadin.github.io/proyekhadin20254/" >Lihat detail</a>
@@ -214,6 +214,7 @@ body{font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Rob
   </script>
 </body>
 </html>
+
 
 
 
