--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Proyek - Hadin</title>
+  <title>Website Profil - Hadin</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="logo H.png" type="image/x-icon">
   <!-- Ganti favicon jika mau -->
@@ -214,6 +214,7 @@ body{font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Rob
   </script>
 </body>
 </html>
+
 
 
 
